# gpt-assistants-api-ui

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  assistants.py  docker-compose.yml  pyproject.toml  streamlit_app.py  tools.py  vercel.json
.streamlit/: sample-secrets.toml
